Opened 12 years ago
Closed 12 years ago
#3855 closed defect (fixed)
Some short MPG files give "Invalid data found when processing input"
| Reported by: | Ridley Combs | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mp3 mpegps probe regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
Some small MPG files give "invalid data" errors early-on. I'm attempting to gather more sample files, and details on what produces them. QuickTime has no problem playing them.
How to reproduce:
$ ffmpeg -loglevel debug -i MOV27379.MPG ffmpeg version N-65478-g6985ef7 Copyright (c) 2000-2014 the FFmpeg developers built on Aug 9 2014 22:54:35 with Apple LLVM version 6.0 (clang-600.0.34.4) (based on LLVM 3.5svn) configuration: --extra-cflags='-march=native' --enable-optimizations --enable-debug --enable-libx265 --enable-gpl --enable-libopus --enable-version3 --enable-nonfree --enable-postproc --enable-libass --enable-libfdk-aac --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-gnutls --enable-libtheora --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxvid --prefix=/usr/local --enable-static --enable-shared --enable-avresample --enable-vda --enable-opencl --enable-libzvbi --cc=clang libavutil 54. 0.100 / 54. 0.100 libavcodec 56. 0.100 / 56. 0.100 libavformat 56. 0.100 / 56. 0.100 libavdevice 56. 0.100 / 56. 0.100 libavfilter 5. 0.100 / 5. 0.100 libavresample 2. 0. 0 / 2. 0. 0 libswscale 3. 0.100 / 3. 0.100 libswresample 1. 0.100 / 1. 0.100 libpostproc 53. 0.100 / 53. 0.100 Splitting the commandline. Reading option '-loglevel' ... matched as option 'loglevel' (set logging level) with argument 'debug'. Reading option '-i' ... matched as input file with argument 'MOV27379.MPG'. Finished splitting the commandline. Parsing a group of options: global . Applying option loglevel (set logging level) with argument debug. Successfully parsed a group of options. Parsing a group of options: input file MOV27379.MPG. Successfully parsed a group of options. Opening an input file: MOV27379.MPG. [AVIOContext @ 0x7f84b040fd80] Statistics: 30269 bytes read, 0 seeks MOV27379.MPG: Invalid data found when processing input
The one sample I have so far:
http://puu.sh/aT6mn/dab3a98d31.MPG
Attachments (1)
Change History (7)
comment:1 by , 12 years ago
by , 12 years ago
| Attachment: | dab3a98d31.MPG added |
|---|
comment:2 by , 12 years ago
| Keywords: | mp3 mpegps probe added |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
mp3 and program stream detection both return the same score for the sample.
comment:3 by , 12 years ago
| Summary: | Some MPG files give "Invalid data found when processing input" → Some short MPG files give "Invalid data found when processing input" |
|---|
comment:4 by , 12 years ago
| Keywords: | regression added |
|---|
Regression since c4674a47
Related to 5afdb3e6 / 64bde805
comment:5 by , 12 years ago
| Priority: | normal → important |
|---|
comment:6 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



Additional sample files are available here: https://www.dropbox.com/sh/6987vzlqjhsmg1e/AACrfRFMas8PTZri9QYyPHYja
Apparently these files come from a SONY DSC-W170, and the issue manifests with files sized at 40kB or smaller.