avformat/mpeg: increase score for short mpeg-ps by 1

Fixes Ticket 3855

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 5109ce2017c15202275b33bce58ec9d88044eeb5)

Conflicts:
	libavformat/mpeg.c